# HermesMade

./: .gitignore  DAILY-REPORT.md  PROMOTION.md  README.md  install.sh
api-cost-compare/: README.md  pyproject.toml
api-cost-compare/api_cost_compare/: __init__.py  cli.py
api-cost-compare/api_cost_compare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
code-inspector/: README.md  pyproject.toml
code-inspector/code_inspector/: __init__.py  cli.py
llm-deploy-helper/: README.md  pyproject.toml
llm-deploy-helper/llm_deploy_helper/: __init__.py  cli.py
model-watch/model_watch/: cli.py
pain_hints/: learnpython_hints_20260424_231319.sh
posts/: reply-censorship.md  rpython-post.md  xiaohongshu-deepseek-v4.md
prompt-inspector/prompt_inspector/: cli.py
scripts/: daily-pipeline  github-metrics  painpoint_1suq2uu.sh
task-cost-estimator/: README.md  pyproject.toml
task-cost-estimator/task_cost_estimator/: __init__.py  cli.py
