[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-inspector"
version = "0.1.0"
description = "Scan AI-generated code for issues — static analysis, common bugs, security flaws, and production-readiness score. Built because AI code looks fine until it isn't."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["code-review", "ai", "static-analysis", "security", "quality", "vibe-coding"]
urls = { repository = "https://github.com/minirr890112-byte/HermesMade" }

[project.scripts]
code-inspector = "code_inspector.cli:main"

[tool.setuptools.packages.find]
include = ["code_inspector*"]
