[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-deploy-helper"
version = "0.1.0"
description = "Detect your hardware and get the perfect local LLM setup command in one line. No more guessing RAM/VRAM/model compatibility."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["llm", "local", "ollama", "llama.cpp", "deploy", "quantization", "hardware", "gpu"]
urls = { repository = "https://github.com/minirr890112-byte/HermesMade" }

[project.scripts]
llm-deploy = "llm_deploy_helper.cli:main"

[tool.setuptools.packages.find]
include = ["llm_deploy_helper*"]
